add queue, more work on results and locks, and benchmarks for everything